Atualizar README e criar pasta resources