@@ -20,30 +20,48 @@ src/
 
 ## Compilação
 Utilize o JDK (versão 17 ou superior) para compilar manualmente os arquivos fonte.
-Um exemplo simples de compilação via linha de comando é:
+Para rodar somente a aplicação de console, compile excluindo a classe JavaFX:
 
 ```bash
-javac -d out $(find src/main/java -name '*.java')
-```
-
-Depois da compilação, a aplicação principal pode ser executada com:
-
-```bash
+javac -d out $(find src/main/java -name '*.java' ! -name 'JavaFXApp.java')
 java -cp out com.uniclinica.controller.App
 ```
 
-### Execução rápida
-
-Para compilar e executar tudo de uma vez existe o script `run.sh`. Ele realiza a
-compilação e chama a classe principal automaticamente. Basta executar:
+Para a interface JavaFX é necessário informar as bibliotecas do JavaFX:
 
 ```bash
-./run.sh
+javac --module-path "$JAVAFX_LIB" --add-modules javafx.controls,javafx.fxml \
+      -d out $(find src/main/java -name '*.java')
+
+java --module-path "$JAVAFX_LIB" --add-modules javafx.controls,javafx.fxml \
+     -cp out com.uniclinica.controller.JavaFXApp
 ```
 
-Ao abrir o projeto no IntelliJ é possível rodar esse mesmo script clicando no
-botão de _Run_ do próprio arquivo ou utilizando a configuração "Run App" já
-incluída no repositório.
+### Execução rápida com scripts
+
+O repositório inclui scripts Bash para facilitar a compilação e execução:
+
+```bash
+./run.sh                       # compila e roda a aplicação de console
+JAVAFX_LIB=/caminho/javafx/lib ./run_javafx.sh  # compila e roda o JavaFX
+```
+
+### Execução rápida com Maven
+
+Abra o terminal do IntelliJ e utilize o Maven para compilar e executar o projeto.
+Os principais comandos são:
+
+```bash
+# Executar a aplicação de console
+mvn exec:java
+
+# Abrir a interface JavaFX
+mvn javafx:run
+```
+
+O IntelliJ detecta automaticamente o projeto Maven, permitindo rodar os comandos
+acima no terminal integrado ou criar configurações de execução a partir dos
+objetivos `exec:java` e `javafx:run`.
 
 ### Executar interface JavaFX
 
